{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 269,
  "lineage": "97d352ac-ff60-b899-7fef-97fb903ed916",
  "resources": [
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:security-group/sg-0754126ee5692d89b",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0754126ee5692d89b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09ae7d81d90a7a3bd"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aws-eks-cluster20211120224129475400000007",
            "name_prefix": "aws-eks-cluster",
            "owner_id": "092592202483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-eks-cluster-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "aws-eks-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:security-group/sg-09ae7d81d90a7a3bd",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ae7d81d90a7a3bd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0754126ee5692d89b"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0754126ee5692d89b"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "aws-eks-cluster20211120224129542400000008",
            "name_prefix": "aws-eks-cluster",
            "owner_id": "092592202483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-eks-cluster-eks_worker_sg",
              "kubernetes.io/cluster/aws-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "aws-eks-cluster-eks_worker_sg",
              "kubernetes.io/cluster/aws-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-2566909579",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0754126ee5692d89b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default",
            "module.eks.module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1926892455",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0754126ee5692d89b",
            "self": false,
            "source_security_group_id": "sg-09ae7d81d90a7a3bd",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.workers",
            "module.vpc.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2358651467",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09ae7d81d90a7a3bd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.workers",
            "module.vpc.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2127732393",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09ae7d81d90a7a3bd",
            "self": false,
            "source_security_group_id": "sg-0754126ee5692d89b",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.workers",
            "module.vpc.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-858057412",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09ae7d81d90a7a3bd",
            "self": false,
            "source_security_group_id": "sg-0754126ee5692d89b",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.workers",
            "module.vpc.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3914555595",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09ae7d81d90a7a3bd",
            "self": false,
            "source_security_group_id": "sg-09ae7d81d90a7a3bd",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.workers",
            "module.vpc.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "mod_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02179611c6590a0a1",
            "association_id": "eipassoc-045b2c3dd04192904",
            "domain": "vpc",
            "id": "eipalloc-02179611c6590a0a1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-009a1fa3c91a8d0c2",
            "private_dns": "ip-10-20-32-60.ec2.internal",
            "private_ip": "10.20.32.60",
            "public_dns": "ec2-50-16-81-177.compute-1.amazonaws.com",
            "public_ip": "50.16.81.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcabc562c185d09a",
            "association_id": "eipassoc-0fcfe5a17e82692b0",
            "domain": "vpc",
            "id": "eipalloc-0dcabc562c185d09a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-041e61756a6d89666",
            "private_dns": "ip-10-20-43-209.ec2.internal",
            "private_ip": "10.20.43.209",
            "public_dns": "ec2-34-200-21-213.compute-1.amazonaws.com",
            "public_ip": "34.200.21.213",
            "public_ipv4_pool": "amazon",
            "tags": {
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:internet-gateway/igw-0b7b076577205fc9a",
            "id": "igw-0b7b076577205fc9a",
            "owner_id": "092592202483",
            "tags": {
              "Name": "vpc",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "vpc",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02179611c6590a0a1",
            "connectivity_type": "public",
            "id": "nat-0960d0a5770fcb1f5",
            "network_interface_id": "eni-009a1fa3c91a8d0c2",
            "private_ip": "10.20.32.60",
            "public_ip": "50.16.81.177",
            "subnet_id": "subnet-0ebd8069d944c5f7e",
            "tags": {
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.mod_nat",
            "module.vpc.module.vpc.aws_internet_gateway.default",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcabc562c185d09a",
            "connectivity_type": "public",
            "id": "nat-07d7b1b7d714c9ca5",
            "network_interface_id": "eni-041e61756a6d89666",
            "private_ip": "10.20.43.209",
            "public_ip": "34.200.21.213",
            "subnet_id": "subnet-00f50908ca479a64f",
            "tags": {
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.default",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.default",
            "module.vpc.module.vpc.aws_eip.mod_nat"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-008b77187c7c0cf4f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0960d0a5770fcb1f5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008b77187c7c0cf4f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.default",
            "module.vpc.module.vpc.aws_eip.mod_nat",
            "module.vpc.module.vpc.aws_internet_gateway.default",
            "module.vpc.module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0138a64b307f80b491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07d7b1b7d714c9ca5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0138a64b307f80b49",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.mod_nat",
            "module.vpc.module.vpc.aws_internet_gateway.default",
            "module.vpc.module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b7b076577205fc9a",
            "id": "r-rtb-06ab016eaa5a662561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06ab016eaa5a66256",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.default",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:route-table/rtb-008b77187c7c0cf4f",
            "id": "rtb-008b77187c7c0cf4f",
            "owner_id": "092592202483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0960d0a5770fcb1f5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_az1",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_az1",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:route-table/rtb-0138a64b307f80b49",
            "id": "rtb-0138a64b307f80b49",
            "owner_id": "092592202483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07d7b1b7d714c9ca5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_az2",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_az2",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:route-table/rtb-06ab016eaa5a66256",
            "id": "rtb-06ab016eaa5a66256",
            "owner_id": "092592202483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7b076577205fc9a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "public",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b64ecd2a5433490",
            "route_table_id": "rtb-008b77187c7c0cf4f",
            "subnet_id": "subnet-07b21920fde928708"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.admin"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036a1f0ba0b2c9e05",
            "route_table_id": "rtb-0138a64b307f80b49",
            "subnet_id": "subnet-07e04134d645fa355"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.admin",
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_private_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05628a31c99135103",
            "route_table_id": "rtb-008b77187c7c0cf4f",
            "subnet_id": "subnet-06f44cd8589f6965e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private_prod",
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bca8ff4800429239",
            "route_table_id": "rtb-0138a64b307f80b49",
            "subnet_id": "subnet-0e6fc06bb5b06cec4"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private_prod",
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_private_working",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5487c41700e1ed1",
            "route_table_id": "rtb-008b77187c7c0cf4f",
            "subnet_id": "subnet-062a035af3c7544a8"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private_working",
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045e5813146d92ae5",
            "route_table_id": "rtb-0138a64b307f80b49",
            "subnet_id": "subnet-0e7aa10bacf83c1e4"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private_working",
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0039fc0d3bfa8c85e",
            "route_table_id": "rtb-06ab016eaa5a66256",
            "subnet_id": "subnet-0ebd8069d944c5f7e"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f77d6b729ef6079",
            "route_table_id": "rtb-06ab016eaa5a66256",
            "subnet_id": "subnet-00f50908ca479a64f"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:subnet/subnet-07b21920fde928708",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.0.0/21",
            "id": "subnet-07b21920fde928708",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092592202483",
            "tags": {
              "Name": "admin_az1",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "admin_az1",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:subnet/subnet-07e04134d645fa355",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.8.0/21",
            "id": "subnet-07e04134d645fa355",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092592202483",
            "tags": {
              "Name": "admin_az2",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "admin_az2",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:subnet/subnet-06f44cd8589f6965e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.64.0/21",
            "id": "subnet-06f44cd8589f6965e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092592202483",
            "tags": {
              "Name": "private_prod_az1",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_prod_az1",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:subnet/subnet-0e6fc06bb5b06cec4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.72.0/21",
            "id": "subnet-0e6fc06bb5b06cec4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092592202483",
            "tags": {
              "Name": "private_prod_az2",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_prod_az2",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_working",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:subnet/subnet-062a035af3c7544a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.96.0/21",
            "id": "subnet-062a035af3c7544a8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092592202483",
            "tags": {
              "Name": "private_working_az1",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_working_az1",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:subnet/subnet-0e7aa10bacf83c1e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.104.0/21",
            "id": "subnet-0e7aa10bacf83c1e4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092592202483",
            "tags": {
              "Name": "private_working_az2",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "private_working_az2",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:subnet/subnet-0ebd8069d944c5f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.32.0/21",
            "id": "subnet-0ebd8069d944c5f7e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092592202483",
            "tags": {
              "Name": "public_az1",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "public_az1",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:subnet/subnet-00f50908ca479a64f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.40.0/21",
            "id": "subnet-00f50908ca479a64f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "092592202483",
            "tags": {
              "Name": "public_az2",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "public_az2",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0b813675c87f3825c"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:092592202483:vpc/vpc-0b813675c87f3825c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0ba09f62c19957a06",
            "default_route_table_id": "rtb-0629a5ec78cd63aa8",
            "default_security_group_id": "sg-0043e2fddb01e8959",
            "dhcp_options_id": "dopt-b74227cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b813675c87f3825c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0629a5ec78cd63aa8",
            "owner_id": "092592202483",
            "tags": {
              "Name": "vpc",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "vpc",
              "kubernetes.io/cluster/aws-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}